[tool.poetry]
name = "buycoins"
version = "0.1.0"
description = ""
authors = ["Rasheed Musa <rasheedmusa9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
gql = {extras = ["requests"], version = "^2.0.0", allow-prereleases = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
tox = "^3.21.3"
httpretty = "^1.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py36']