[tool.poetry]
name = "buycoins"
version = "1.0.0"
description = "A Python SDK for the buycoins API"
authors = ["Rasheed Musa <rasheedmusa9@gmail.com>"]
readme = "README.md"
repository = "https://github.com/edgeee/buycoins-python"
documentation = "https://github.com/edgeee/buycoins-python"

[tool.poetry.dependencies]
python = "^3.6"
gql = {extras = ["requests"], version = "^2.0.0", allow-prereleases = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
tox = "^3.21.3"
httpretty = "^1.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py36']